--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <title>
       Imersão Dev - Aula 01
     </title>
+    <link href = 'https://netomachado.github.io/imersaodev-iramarte/style.css' ref= 'stylesheet' />
+    <script src= 'https://netomachado.github.io/imersaodev-iramarte/script.js' ></script>
+    
   </head>
   <body>
     <div class="container">
