--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>
       Imersão Dev - Aula 01
     </title>
-    <link href = 'https://netomachado.github.io/imersaodev-iramarte/style.css' ref= 'stylesheet' />
+    <link href = 'https://netomachado.github.io/imersaodev-iramarte/style.css' rel= 'stylesheet' />
     <script src= 'https://netomachado.github.io/imersaodev-iramarte/script.js' ></script>
     
   </head>
